# dotmage-cli

./: .gitignore  Cargo.toml  README.md  install.ps1
.github/workflows/: ci.yml  release.yml
client/: Cargo.toml
client/src/: backend.rs  backend_fs.rs  backend_http.rs  config.rs  keychain.rs  lib.rs  token.rs  types.rs
client/tests/: integration.rs  test_http_backend.rs
crypto/: Cargo.toml
crypto/src/: blob.rs  envelope.rs  kdf.rs  lib.rs  secret.rs  zeroize_util.rs
crypto/tests/: vectors.rs
dmage/: Cargo.toml
dmage/src/: main.rs
dmage/src/cmd/: apps.rs  auth.rs  clean.rs  diff.rs  env.rs  exec.rs  gen_ci_token.rs  gen_token.rs  history.rs  init.rs  lock.rs  mod.rs  pull.rs  push.rs  rollback.rs  status.rs  token_cmd.rs
