[package]
name = "dotmage-client"
version = "0.1.0"
edition = "2021"

[dependencies]
dotmage-crypto = { path = "../crypto" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
keyring = "3"
dirs = "6"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["blocking"] }
