[package]
name = "dmage"
version = "1.1.0"
edition = "2021"

[dependencies]
dotmage-client = { path = "../client" }
dotmage-crypto = { path = "../crypto" }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
rpassword = "7"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
